Moved to Gradle, added "emoji" support, allow players to use minimessage + some basic moderation options