@@ -1,21 +1,19 @@
-package not.savage.chat.adventure;
+package net.chamosmp.irene.adventure;
 
 import io.papermc.paper.chat.ChatRenderer;
 import me.clip.placeholderapi.PlaceholderAPI;
+import net.chamosmp.irene.IrenePlugin;
+import net.chamosmp.irene.util.ColorUtil;
 import net.kyori.adventure.audience.Audience;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.MiniMessage;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import net.luckperms.api.LuckPerms;
 import net.luckperms.api.cacheddata.CachedMetaData;
-import not.savage.chat.SimpleChat;
-import not.savage.chat.util.KyoriString;
-import not.savage.chat.util.Placeholder;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.RegisteredServiceProvider;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -23,23 +21,22 @@ import java.util.Map;
 /**
  * Viewer UnAware Chat Renderer for SimpleChat.
  */
-public class SimpleChatRenderer implements ChatRenderer {
+public class IreneChatRenderer implements ChatRenderer {
 
-    private final SimpleChat plugin;
+    private final IrenePlugin plugin;
     private final LuckPerms luckPerms;
-    private final Map<String, KyoriString> formats = new HashMap<>();
+    private final Map<String, Component> formats = new HashMap<>();
     private final boolean usePlaceholderAPI;
-    private final boolean replaceLegacyAmpersand;
 
-    public SimpleChatRenderer(final SimpleChat plugin) {
+    public IreneChatRenderer(final IrenePlugin plugin) {
         this.plugin = plugin;
 
         // Setup Luck Perms
         final RegisteredServiceProvider<LuckPerms> lpsp = plugin.getServer().getServicesManager().getRegistration(LuckPerms.class);
         luckPerms = (lpsp != null) ? lpsp.getProvider() : null;
         if (luckPerms == null) {
-            plugin.getLogger().severe("LuckPerms is not available! SimpleChat will not function properly.");
-            throw new IllegalStateException("LuckPerms is required for SimpleChat to function.");
+            plugin.getLogger().severe("LuckPerms is not available! Irene will not function properly.");
+            throw new IllegalStateException("LuckPerms is required for Irene to function.");
         }
         plugin.getLogger().info("LuckPerms found, using it for chat formatting.");
 
@@ -51,10 +48,8 @@ public class SimpleChatRenderer implements ChatRenderer {
             plugin.getLogger().warning("PlaceholderAPI not found, placeholders will not be processed in message format.");
         }
 
-        replaceLegacyAmpersand = plugin.getConfig().getBoolean("support_legacy_ampersand", true);
-
         // Make sure the config has at least one format defined
-        if (!plugin.getConfig().isConfigurationSection("formats")) {
+        if (!plugin.getConfig().isConfigurationSection("chat-formats.formats")) {
             plugin.getLogger().warning("No chat formats found in config! Please define at least a 'default' format.");
             throw new IllegalStateException("Chat formats are not defined in the config.");
         }
@@ -67,13 +62,14 @@ public class SimpleChatRenderer implements ChatRenderer {
             });
         }
 
-        plugin.getConfig().getConfigurationSection("formats").getKeys(false).forEach(key -> {
-            String formatString = plugin.getConfig().getString("formats." + key);
+        plugin.getConfig().getConfigurationSection("chat-formats.formats").getKeys(false).forEach(key -> {
+            String formatString = plugin.getConfig().getString("chat-formats.formats." + key);
             for (Map.Entry<String, String> component : components.entrySet()) {
                 formatString = formatString.replace("<" + component.getKey() + ">", component.getValue());
             }
-
-            formats.put(key, new KyoriString(formatString));
+            if (formatString != null) {
+                formats.put(key, ColorUtil.parse(formatString));
+            }
         });
 
         plugin.getLogger().info("Loaded " + formats.size() + " chat formats from config.");
@@ -94,35 +90,57 @@ public class SimpleChatRenderer implements ChatRenderer {
             return Component.empty();
         }
 
-        KyoriString format = formats.getOrDefault(formatKey, formats.get("default"));
+        Component format = formats.getOrDefault(formatKey, formats.get("default"));
         if (format == null) {
             plugin.getLogger().warning("Config does not contain a format for group " + formatKey + " and/or no \"default\" format is set.");
             return Component.empty();
         }
+        String stringFormat = ColorUtil.deParse(format);
 
         if (usePlaceholderAPI) {
-            String replacement = PlaceholderAPI.setPlaceholders(source, format.text());
+            String replacement = ColorUtil.deParse(ColorUtil.parse(source, stringFormat));
             replacement = PlaceholderAPI.setRelationalPlaceholders(source, (Player) viewer, replacement);
-            if (replaceLegacyAmpersand) {
-                replacement = replaceLegacyAmpersand(replacement);
-            }
-            format = new KyoriString(replacement);
+            stringFormat = replacement;
         }
 
-        final List<Placeholder> placeholders = new ArrayList<>();
+        if (plugin.getConfig().getBoolean("emojis.enabled", true)) {
+            message = ColorUtil.parse(ColorUtil.emojiPlaceholder(
+                    ColorUtil.deParse(message),
+                    plugin.getConfig().getString("emojis.character", ":"),
+                    plugin.getConfig().getBoolean("emojis.items"),
+                    plugin.getConfig().getBoolean("emojis.player-heads")
+            ));
+        }
+
+        if (plugin.getConfig().getBoolean("chat-heads")) {
+            stringFormat = "<head:" + source.getUniqueId() + ">" + stringFormat;
+        }
+
+        final Map<String, String> placeholders = new HashMap<>();
         String prefix = user.getPrefix() != null ? user.getPrefix() : "";
         String suffix = user.getSuffix() != null ? user.getSuffix() : "";
 
-        if (replaceLegacyAmpersand) {
-            prefix = replaceLegacyAmpersand(prefix);
-            suffix = replaceLegacyAmpersand(suffix);
+
+        String stringMessage = PlainTextComponentSerializer.plainText().serialize(message);
+        switch (plugin.getConfig().getString("minimessage-formatting", "NONE").toUpperCase()) {
+            case "NON_INTERACTABLE":
+                message = MiniMessage.miniMessage(MiniMessage.Preset.NON_INTERACTABLE).deserialize(stringMessage);
+                break;
+            case "FORMATTED_TEXT":
+                message = MiniMessage.miniMessage(MiniMessage.Preset.FORMATTED_TEXT).deserialize(stringMessage);
+                break;
+            case "DEFAULT":
+                message = MiniMessage.miniMessage(MiniMessage.Preset.DEFAULT).deserialize(stringMessage);
+                break;
+            default:
+                break;
         }
 
-        placeholders.add(Placeholder.of("prefix", prefix));
-        placeholders.add(Placeholder.of("suffix", suffix));
-        placeholders.add(Placeholder.of("message", MiniMessage.miniMessage().serialize(message)));
-        placeholders.add(Placeholder.of("name", source.getName()));
-        placeholders.add(Placeholder.of("group", formatKey));
+        placeholders.put("prefix", prefix);
+        placeholders.put("suffix", suffix);
+        placeholders.put("message", ColorUtil.deParse(message));
+        placeholders.put("name", source.getName());
+        placeholders.put("group", formatKey);
 
         // Find meta tag references %meta-key% and replace them with their values
         for (Map.Entry<String, List<String>> meta : user.getMeta().entrySet()) {
@@ -132,22 +150,17 @@ public class SimpleChatRenderer implements ChatRenderer {
                 continue;
             }
             // We only map the first value for each meta key
-            String value = values.get(0);
+            String value = values.getFirst();
             String placeholder = "%" + key + "%";
-            placeholders.add(Placeholder.of(placeholder, value));
+            placeholders.put(placeholder, value);
         }
 
-        return format.replaceAndColor(placeholders.toArray(new Placeholder[0]));
-    }
-
-    private String replaceLegacyAmpersand(String text) {
-        if (text == null || text.isEmpty()) {
-            return text;
+        if (plugin.getConfig().getBoolean("chat-formats.enabled")) {
+            return ColorUtil.parse(source, stringFormat, placeholders);
+        } else if (plugin.getConfig().getBoolean("chat-heads")) {
+            return ColorUtil.parse("<head:" + source.getUniqueId() + ">").append(message);
+        } else {
+            return message;
         }
-        final Component component = LegacyComponentSerializer.legacyAmpersand().deserialize(text);
-        String result = MiniMessage.miniMessage().serialize(component);
-
-        // un-escape adventure style tags \<tag> (LegacyComponentSerializer escapes them)
-        return result.replace("\\<", "<");
     }
 }
